--- a/webapp/index.html
+++ b/webapp/index.html
@@ -40,17 +40,17 @@
     <link rel="stylesheet" href="src/flipdown/flipdown.min.css"/>
     <script type="text/javascript" src="src/flipdown/flipdown.min.js"></script>
     
-    <link rel="stylesheet" href="src/first_screen.css?v=01146"/>
-    <link rel="stylesheet" href="src/second_screen.css?v=01146"/>
+    <link rel="stylesheet" href="src/first_screen.css?v=01147"/>
+    <link rel="stylesheet" href="src/second_screen.css?v=01147"/>
 
-    <link rel="stylesheet" href="src/play.css?v=01146"/>
+    <link rel="stylesheet" href="src/play.css?v=01147"/>
     <style type="text/css"></style>
 
-    <script type="text/javascript" src="src/common.js?v=01146"></script>
-    <script type="text/javascript" src="src/first_screen.js?v=01146"></script>
-    <!--script type="text/javascript" src="src/second_screen.js?v=01146"></script-->
-    <script type="text/javascript" src="src/poll.js?v=01146"></script>
-    <script type="text/javascript" src="src/play.js?v=01146"></script>
+    <script type="text/javascript" src="src/common.js?v=01147"></script>
+    <script type="text/javascript" src="src/first_screen.js?v=01147"></script>
+    <!--script type="text/javascript" src="src/second_screen.js?v=01147"></script-->
+    <script type="text/javascript" src="src/poll.js?v=01147"></script>
+    <script type="text/javascript" src="src/play.js?v=01147"></script>
     <script type="text/javascript">
       window.onload = async function() {
         //'use strict';
@@ -189,7 +189,7 @@
                     </div>
                   </div>
 
-                  <div class="swiper-slide non-white-bg">
+                  <div class="swiper-slide non-white-bg" style="overflow-y: scroll;">
                     <!--p id="flipdown_header">Через</p>
                     <div id="flipdown" class="flipdown"></div>
                     <div id="flipdown_explain">
