--- a/webapp/index.html
+++ b/webapp/index.html
@@ -239,11 +239,11 @@
               </div>
             </div>
             <div class="swiper-slide non-white-bg list-">
-              <h2 style="margin-top: 11vh;">Ваши розыгрыши</h2>
+              <h2 style="margin-top: 11vh;">Мои розыгрыши</h2>
               <div id="drawings_list">
                 <div id="yesterday">
                   <!--h3>Вчера и позавчера</h3-->
-                  <h3>Вчера или последний ранее</h3>
+                  <h3 id="yesterday_or_earlier_header">Вчера</h3>
                   <div id="just"><p>Не было вовсе, не было по вашим настройкам, либо вы просто вчера не участвовали</p></div>  
                 </div>
                 <h3>Сегодня</h3>
@@ -251,6 +251,15 @@
                 <div id="flipdown" class="flipdown"></div>
                 <h3>Завтра (и до 27 января)</h3>
                 <div id="next"><p>Нет</p></div>
+
+                <h2 style="margin: 1.5em 0 0.3em 0">Шансы на выигрыш</h2>
+                <p>Шансы на выигрыш сегодня или в ближайшее время: <b>средние</b></p>
+                <div id="chances_to_win_container">
+                  <div id="chances_to_win_bar"></div>
+                </div>
+                <div id="chances_to_win_explain">
+                  <p><a href="#">Как увеличить шансы?</a></p>
+                </div>
 
                 <h2 style="margin: 1.5em 0 0.3em 0" id="rating_header">⭐️ Ваш рейтинг</h2>
                 <p id="rating_intro">Скоро здесь будет информация о вашем "рейтинге" &mdash; вашей вероятности побеждать в розыгрышах по отношению к другим участникам. На рейтинг влияют такие показатели, как: заполнили ли вы разделы "О вас" и "Ваши бренды", сколько раз подряд вы уже участвуете, давно ли вы не выигрывали, и т.д. Если вы постоянно участвуете, заполнили свой профиль, давно не выигрывали &mdash; то ваши шансы на выигрыш в ближайшее время будут самыми высокими, и наоборот.</p>
