--- a/webapp/index.html
+++ b/webapp/index.html
@@ -40,17 +40,17 @@
     <link rel="stylesheet" href="src/flipdown/flipdown.min.css"/>
     <script type="text/javascript" src="src/flipdown/flipdown.min.js"></script>
     
-    <link rel="stylesheet" href="src/first_screen.css?v=01147"/>
-    <link rel="stylesheet" href="src/second_screen.css?v=01147"/>
+    <link rel="stylesheet" href="src/first_screen.css?v=01148"/>
+    <link rel="stylesheet" href="src/second_screen.css?v=01148"/>
 
-    <link rel="stylesheet" href="src/play.css?v=01147"/>
+    <link rel="stylesheet" href="src/play.css?v=01148"/>
     <style type="text/css"></style>
 
-    <script type="text/javascript" src="src/common.js?v=01147"></script>
-    <script type="text/javascript" src="src/first_screen.js?v=01147"></script>
-    <!--script type="text/javascript" src="src/second_screen.js?v=01147"></script-->
-    <script type="text/javascript" src="src/poll.js?v=01147"></script>
-    <script type="text/javascript" src="src/play.js?v=01147"></script>
+    <script type="text/javascript" src="src/common.js?v=01148"></script>
+    <script type="text/javascript" src="src/first_screen.js?v=01148"></script>
+    <!--script type="text/javascript" src="src/second_screen.js?v=01148"></script-->
+    <script type="text/javascript" src="src/poll.js?v=01148"></script>
+    <script type="text/javascript" src="src/play.js?v=01148"></script>
     <script type="text/javascript">
       window.onload = async function() {
         //'use strict';
@@ -239,7 +239,7 @@
               </div>
             </div>
             <div class="swiper-slide non-white-bg list-">
-              <h2 style="margin-top: 11vh;">Мои розыгрыши</h2>
+              <h2 style="margin-top: 11vh;">Ваши розыгрыши</h2>
               <div id="drawings_list">
                 <div id="yesterday">
                   <!--h3>Вчера и позавчера</h3-->
@@ -253,7 +253,7 @@
                 <div id="next"><p>Нет</p></div>
 
                 <h2 style="margin: 1.5em 0 0.3em 0">Шансы на выигрыш</h2>
-                <p>Шансы на выигрыш сегодня или в ближайшее время: <b>средние</b></p>
+                <p>Ваши шансы на выигрыш сегодня или в ближайшие дни: <b>средние</b></p>
                 <div id="chances_to_win_container">
                   <div id="chances_to_win_bar"></div>
                 </div>
