--- a/webapp/index.html
+++ b/webapp/index.html
@@ -190,7 +190,7 @@
             <div class="swiper-slide non-white-bg list-">
               <div class="swiper-inner">
                 <div class="swiper-wrapper">
-                  <div class="swiper-slide">
+                  <div class="swiper-slide" style="overflow-y: scroll;">
 
                     <h2 style="margin-top: 11vh;">Ваши розыгрыши</h2>
                     <div id="drawings_list">
