--- a/webapp/index.html
+++ b/webapp/index.html
@@ -50,7 +50,7 @@
     <script type="text/javascript" src="src/first_screen.js?v=01150"></script>
     <!--script type="text/javascript" src="src/second_screen.js?v=01150"></script-->
     <script type="text/javascript" src="src/poll.js?v=01150"></script>
-    <script type="text/javascript" src="src/yandex.js?v=01150"></script>
+    <script type="text/javascript" src="src/yandex/geosuggest.js?v=01150"></script>
     <script type="text/javascript" src="src/play.js?v=01150"></script>
     <script type="text/javascript">
       window.onload = async function() {
