--- a/webapp/index.html
+++ b/webapp/index.html
@@ -40,18 +40,18 @@
     <link rel="stylesheet" href="src/flipdown/flipdown.min.css"/>
     <script type="text/javascript" src="src/flipdown/flipdown.min.js"></script>
     
-    <link rel="stylesheet" href="src/first_screen.css?v=01150"/>
-    <link rel="stylesheet" href="src/second_screen.css?v=01150"/>
+    <link rel="stylesheet" href="src/first_screen.css?v=01151"/>
+    <link rel="stylesheet" href="src/second_screen.css?v=01151"/>
 
-    <link rel="stylesheet" href="src/play.css?v=01150"/>
+    <link rel="stylesheet" href="src/play.css?v=01151"/>
     <style type="text/css"></style>
 
-    <script type="text/javascript" src="src/common.js?v=01150"></script>
-    <script type="text/javascript" src="src/first_screen.js?v=01150"></script>
-    <!--script type="text/javascript" src="src/second_screen.js?v=01150"></script-->
-    <script type="text/javascript" src="src/poll.js?v=01150"></script>
-    <script type="text/javascript" src="src/yandex/geosuggest.js?v=01150"></script>
-    <script type="text/javascript" src="src/play.js?v=01150"></script>
+    <script type="text/javascript" src="src/common.js?v=01151"></script>
+    <script type="text/javascript" src="src/first_screen.js?v=01151"></script>
+    <!--script type="text/javascript" src="src/second_screen.js?v=01151"></script-->
+    <script type="text/javascript" src="src/poll.js?v=01151"></script>
+    <script type="text/javascript" src="src/yandex/geosuggest.js?v=01151"></script>
+    <script type="text/javascript" src="src/play.js?v=01151"></script>
     <script type="text/javascript">
       window.onload = async function() {
         //'use strict';
@@ -236,7 +236,8 @@
                     </div-->
 
                     <h2 style="margin-top: 11vh;">Ваши настройки</h2>
-                    <p>На основе данных, указанными вами ниже, система предлагает наиболее интересные вам розыгрыши, а владельцы брендов узнают, какая аудитория их поддерживает &mdash; и придумывают для вас лучшие предложения и подарки.</p>
+                    <p><a href="#">Как и на что влияют настройки?</a></p>
+                    <!--p>На основе данных, указанными вами ниже, система предлагает наиболее интересные вам розыгрыши, а владельцы брендов узнают, какая аудитория их поддерживает &mdash; и придумывают для вас лучшие предложения и подарки.</p-->
                     <p id="fill_data"></p>
 
                     <div class="accordion" id="accordionExample">
@@ -263,8 +264,8 @@
                           </h2>
                           <div id="collapseTwo" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
                             <div class="accordion-body">
-                              <p>Выберите бренды, которые вы любите, точки продаж которых вы чаще всего посещаете, в розыгрыше подарков от которых вы хотели бы участвовать. Цветами выделены бренды, которые <span class="available">сейчас участвуют</span> (либо в данный момент на паузе, но могут начать участвовать в любой момент), <span class="preparing">готовятся к участию</span> или <span class="not-available">пока не заинтересованы участвовать</span> в розыгрышах.</p>
-                              <p style="font-size: 0.85em;">Если вы заметили, что какого-то бренда не хватает, или его больше нет, или вы хозяин бренда и хотите поучаствовать в розыгрышах, то, пожалуйста, <a href="https://telegram.me/adt_bot" target="_blank">сообщите нам об этом</a> прямо в боте.</p>
+                              <!--p>Выберите бренды, которые вы любите, точки продаж которых вы чаще всего посещаете, в розыгрыше подарков от которых вы хотели бы участвовать. Цветами выделены бренды, которые <span class="available">сейчас участвуют</span> (либо в данный момент на паузе, но могут начать участвовать в любой момент), <span class="preparing">готовятся к участию</span> или <span class="not-available">пока не заинтересованы участвовать</span> в розыгрышах.</p>
+                              <p style="font-size: 0.85em;">Если вы заметили, что какого-то бренда не хватает, или его больше нет, или вы хозяин бренда и хотите поучаствовать в розыгрышах, то, пожалуйста, <a href="https://telegram.me/adt_bot" target="_blank">сообщите нам об этом</a> прямо в боте.</p-->
                               <div id="list" class="section"><p><b>Пожалуйста, подождите, список организаций загружается...</b></p></div>
                             </div>
                           </div>
