--- a/webapp/index.html
+++ b/webapp/index.html
@@ -205,8 +205,8 @@
                       <h3>Завтра (и до 27 января)</h3>
                       <div id="next"><p>Нет</p></div>
 
-                      <h2 style="margin: 1.5em 0 0.3em 0">Ваши шансы на выигрыш</h2>
-                      <p>Ваши шансы на выигрыш сегодня или в ближайшие дни: <b>средние</b></p>
+                      <h2 style="margin: 1.5em 0 0.3em 0">Шансы на выигрыш</h2>
+                      <p>Ваши шансы на выигрыш в одном из ближайших розыгрышей: <b>средние</b></p>
                       <div id="chances_to_win_container">
                         <div id="chances_to_win_bar"></div>
                       </div>
@@ -220,7 +220,7 @@
                       <h2 style="margin: 1.5em 0 0.3em 0;" id="invite_others">Пригласить других</h2>
                       <p>Пригласите к участию своих родных и близких: <a href="https://telegram.me/share/url?url=https://telegram.me/adte_bot?start=irfr" target="_blank">@adte_bot</a> &mdash; и выигрывайте больше подарков вместе!</p>
 
-                      <h2 style="margin: 1.5em 0 0.3em 0;" id="past_header">Ваша история и аналитика</h2>
+                      <h2 style="margin: 1.5em 0 0.3em 0;" id="past_header">История и аналитика</h2>
                       <div id="past">
                         <p>Здесь будет история и аналитика по всем розыгрышам, в которых вы будете участвовать.</p>
                       </div>
