--- a/webapp/index.html
+++ b/webapp/index.html
@@ -206,7 +206,7 @@
                       <div id="next"><p>Нет</p></div>
 
                       <h2 style="margin: 1.5em 0 0.3em 0">Шансы на выигрыш</h2>
-                      <p>Ваши шансы на выигрыш в одном из ближайших розыгрышей: <b>средние</b></p>
+                      <p>Ваши шансы на выигрыш в следующем розыгрыше: <b>средние</b></p>
                       <div id="chances_to_win_container">
                         <div id="chances_to_win_bar"></div>
                       </div>
@@ -217,13 +217,19 @@
                       <h2 style="margin: 1.5em 0 0.3em 0" id="rating_header">⭐️ Ваш рейтинг</h2>
                       <p id="rating_intro">Скоро здесь будет информация о вашем "рейтинге" &mdash; вашей вероятности побеждать в розыгрышах по отношению к другим участникам. На рейтинг влияют такие показатели, как: заполнили ли вы разделы "О вас" и "Ваши бренды", сколько раз подряд вы уже участвуете, давно ли вы не выигрывали, и т.д. Если вы постоянно участвуете, заполнили свой профиль, давно не выигрывали &mdash; то ваши шансы на выигрыш в ближайшее время будут самыми высокими, и наоборот.</p>
 
-                      <h2 style="margin: 1.5em 0 0.3em 0;" id="invite_others">Пригласить других</h2>
-                      <p>Пригласите к участию своих родных и близких: <a href="https://telegram.me/share/url?url=https://telegram.me/adte_bot?start=irfr" target="_blank">@adte_bot</a> &mdash; и выигрывайте больше подарков вместе!</p>
-
                       <h2 style="margin: 1.5em 0 0.3em 0;" id="past_header">История и аналитика</h2>
                       <div id="past">
                         <p>Здесь будет история и аналитика по всем розыгрышам, в которых вы будете участвовать.</p>
                       </div>
+
+                      <h2 style="margin: 1.5em 0 0.3em 0;" id="invite_others">Пригласить других</h2>
+                      <p>Пригласите к участию своих родных и близких: <a href="https://telegram.me/share/url?url=https://telegram.me/adte_bot?start=irfr" target="_blank">@adte_bot</a> &mdash; и выигрывайте больше подарков вместе!</p>
+
+                      <h2 style="margin: 1.5em 0 0.3em 0;" id="past_header-">Правила</h2>
+                      <div id="past-">
+                        <p><a href="#">Правила розыгрышей</a></p>
+                      </div>
+
                       <br>
                     </div>
                   </div>
