--- a/webapp/index.html
+++ b/webapp/index.html
@@ -206,7 +206,7 @@
                       <div id="next"><p>Нет</p></div>
 
                       <h2 style="margin: 1.5em 0 0.3em 0">Шансы на выигрыш</h2>
-                      <p>Ваши шансы на выигрыш в следующем розыгрыше: <b>средние</b></p>
+                      <p>Ваши шансы на выигрыш в следующем розыгрыше: <b id="chances_to_win_word">средние</b></p>
                       <div id="chances_to_win_container">
                         <div id="chances_to_win_bar"></div>
                       </div>
