--- a/webapp/index.html
+++ b/webapp/index.html
@@ -202,7 +202,7 @@
                       <h3>Сегодня</h3>
                       <div id="now"><p>Нет</p></div>
                       <div id="flipdown" class="flipdown"></div>
-                      <h3>Завтра (и до 27 января)</h3>
+                      <h3>Завтра (и до 1 февраля)</h3>
                       <div id="next"><p>Нет</p></div>
 
                       <h2 style="margin: 1.5em 0 0.3em 0">Шансы на выигрыш</h2>
