--- a/webapp/index.html
+++ b/webapp/index.html
@@ -40,18 +40,18 @@
     <link rel="stylesheet" href="src/flipdown/flipdown.min.css"/>
     <script type="text/javascript" src="src/flipdown/flipdown.min.js"></script>
     
-    <link rel="stylesheet" href="src/first_screen.css?v=01151"/>
-    <link rel="stylesheet" href="src/second_screen.css?v=01151"/>
+    <link rel="stylesheet" href="src/first_screen.css?v=01152"/>
+    <link rel="stylesheet" href="src/second_screen.css?v=01152"/>
 
-    <link rel="stylesheet" href="src/play.css?v=01151"/>
+    <link rel="stylesheet" href="src/play.css?v=01152"/>
     <style type="text/css"></style>
 
-    <script type="text/javascript" src="src/common.js?v=01151"></script>
-    <script type="text/javascript" src="src/first_screen.js?v=01151"></script>
-    <!--script type="text/javascript" src="src/second_screen.js?v=01151"></script-->
-    <script type="text/javascript" src="src/poll.js?v=01151"></script>
-    <script type="text/javascript" src="src/yandex/geosuggest.js?v=01151"></script>
-    <script type="text/javascript" src="src/play.js?v=01151"></script>
+    <script type="text/javascript" src="src/common.js?v=01152"></script>
+    <script type="text/javascript" src="src/first_screen.js?v=01152"></script>
+    <!--script type="text/javascript" src="src/second_screen.js?v=01152"></script-->
+    <script type="text/javascript" src="src/poll.js?v=01152"></script>
+    <script type="text/javascript" src="src/yandex/geosuggest.js?v=01152"></script>
+    <script type="text/javascript" src="src/play.js?v=01152"></script>
     <script type="text/javascript">
       window.onload = async function() {
         //'use strict';
@@ -211,7 +211,7 @@
                         <div id="chances_to_win_bar"></div>
                       </div>
                       <div id="chances_to_win_explain">
-                        <p><a href="#">Как увеличить шансы?</a></p>
+                        <p><a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">Как увеличить шансы?</a></p>
                       </div>
 
                       <h2 style="margin: 1.5em 0 0.3em 0" id="rating_header">⭐️ Ваш рейтинг</h2>
@@ -227,7 +227,7 @@
 
                       <h2 style="margin: 1.5em 0 0.3em 0;" id="past_header-">Правила</h2>
                       <div id="past-">
-                        <p><a href="#">Правила розыгрышей</a></p>
+                        <p><a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">Правила розыгрышей</a></p>
                       </div>
 
                       <br>
@@ -292,16 +292,16 @@
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered- modal-dialog-scrollable">
         <div class="modal-content">
-          <div class="modal-header">
+          <!--div class="modal-header">
             <h1 class="modal-title fs-5" id="exampleModalLabel">Сведения о рекламодателе</h1>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
-          </div>
+          </div-->
           <div class="modal-body" style="height: 100vh;">
             ...
           </div>
-          <!--div class="modal-footer">
+          <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
-          </div-->
+          </div>
         </div>
       </div>
     </div>
