--- a/webapp/index.html
+++ b/webapp/index.html
@@ -40,18 +40,18 @@
     <link rel="stylesheet" href="src/flipdown/flipdown.min.css"/>
     <script type="text/javascript" src="src/flipdown/flipdown.min.js"></script>
     
-    <link rel="stylesheet" href="src/first_screen.css?v=01153"/>
-    <link rel="stylesheet" href="src/second_screen.css?v=01153"/>
+    <link rel="stylesheet" href="src/first_screen.css?v=01154"/>
+    <link rel="stylesheet" href="src/second_screen.css?v=01154"/>
 
-    <link rel="stylesheet" href="src/play.css?v=01153"/>
+    <link rel="stylesheet" href="src/play.css?v=01154"/>
     <style type="text/css"></style>
 
-    <script type="text/javascript" src="src/common.js?v=01153"></script>
-    <script type="text/javascript" src="src/first_screen.js?v=01153"></script>
-    <!--script type="text/javascript" src="src/second_screen.js?v=01153"></script-->
-    <script type="text/javascript" src="src/poll.js?v=01153"></script>
-    <script type="text/javascript" src="src/yandex/geosuggest.js?v=01153"></script>
-    <script type="text/javascript" src="src/play.js?v=01153"></script>
+    <script type="text/javascript" src="src/common.js?v=01154"></script>
+    <script type="text/javascript" src="src/first_screen.js?v=01154"></script>
+    <!--script type="text/javascript" src="src/second_screen.js?v=01154"></script-->
+    <script type="text/javascript" src="src/poll.js?v=01154"></script>
+    <script type="text/javascript" src="src/yandex/geosuggest.js?v=01154"></script>
+    <script type="text/javascript" src="src/play.js?v=01154"></script>
     <script type="text/javascript">
       window.onload = async function() {
         //'use strict';
@@ -192,7 +192,7 @@
                 <div class="swiper-wrapper">
                   <div class="swiper-slide" style="overflow-y: scroll;">
 
-                    <h2 style="margin-top: 11vh;">Ваши розыгрыши</h2>
+                    <h2 class="h-offset">Ваши розыгрыши</h2>
                     <div id="drawings_list">
                       <div id="yesterday">
                         <!--h3>Вчера и позавчера</h3-->
@@ -241,7 +241,7 @@
                       <p><span class="conditions"><span id="percent"></span>%</span> участников выиграют подарок от <span class="conditions" id="who"></span>. Вы участвуете&nbsp;👍</p>
                     </div-->
 
-                    <h2 style="margin-top: 11vh;">Ваши настройки</h2>
+                    <h2 class="h-offset">Ваши настройки</h2>
                     <p><a href="#" data-bs-toggle="modal" data-bs-target="#exampleModal" onclick="modal_explain_settings()">Как и на что влияют настройки?</a></p>
                     <!--p>На основе данных, указанными вами ниже, система предлагает наиболее интересные вам розыгрыши, а владельцы брендов узнают, какая аудитория их поддерживает &mdash; и придумывают для вас лучшие предложения и подарки.</p-->
                     <p id="fill_data"></p>
